--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -18,4 +18,4 @@ jobs:
       - run: sam build --use-container
       # Run Unit tests- Specify unit tests here
       # sam deploy
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket ${{ secrets.S3_BUCKET_NAME }}M --region ${{ secrets.AWS_REGION }}
+      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket ${{ secrets.S3_BUCKET_NAME  }} --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }}
