--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -13,9 +13,8 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_SECRET_REGION }}
+          aws-region: us-east-1 #Or ${{ secrets.AWS_REGION }}
       # sam build
       - run: sam build --use-container
-      # Run Unit tests- Specify unit tests here
       # sam deploy
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket dempsey-bucket --capabilities CAPABILITY_IAM --region us-east-1
+      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket dempsey-bucket --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }}
